test/classes/errors/nilability-return-yield/yield-shared.good
yield-shared.chpl:3: In iterator 'I':
yield-shared.chpl:3: error: cannot initialize 'shared C' from a 'shared C?'
